--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sharp": "^2.13.2",
     "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-source-storyblok": "^1.2.0",
     "gatsby-transformer-sharp": "^2.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "storyblok-react": "^0.1.2"
   },
   "devDependencies": {
     "prettier": "2.2.1"
